# shop

./: main.py  pyproject.toml
main/: item.py
tests/: test_main.py
utils/: csverror.py  item.py  keyboard.py
