[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["nvLast86 <n.lastenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
poetry-lock-package = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
